cleanup, compile warnings, deprecations
cleanup, compile warnings, deprecations