@@ -29,13 +29,12 @@ public class IOReadWriteScoreConverter extends BaseScoreConverter {
     @Override
     public Double convertScore(Double score , Map<String,Object> metaData) {
         if (score != null){
-            Double oldScore = new Double((double)score.doubleValue()/1000) ;
+            double oldScore = Double.valueOf((double)score.doubleValue()/1000) ;
             long mb = 1_048_576 ;
             double benchmarkFileSize = (double) IOUtils.getHugeRandomBinaryFileSizeInBytes()/mb ;
             double newScore = benchmarkFileSize/oldScore ;
-            return new Double(newScore) ;
+            return newScore;
         }
-
         return score ;
     }
 
