@@ -28,7 +28,7 @@ public class IOSeekScoreConverter extends BaseScoreConverter {
     public Double convertScore(Double score , Map<String,Object> metaData) {
         if (score != null){
             double oneGBinMB = 1_024 ;
-            Double oldScore = new Double((double)score.doubleValue()/1000) ;
+            double oldScore =  Double.valueOf((double)score.doubleValue()/1000) ;
             return oneGBinMB/oldScore ;
         }
         return score;
