@@ -30,13 +30,12 @@ public class IOSyncReadWriteScoreConverter extends BaseScoreConverter {
     @Override
     public Double convertScore(Double score , Map<String,Object> metaData) {
         if (score != null){
-            Double oldScore = new Double((double)score.doubleValue()/1000) ;
+            double oldScore =  Double.valueOf((double)score.doubleValue()/1000) ;
             long mb = 1_048_576 ;
             double benchmarkFileSize = (double) IOUtils.getSmallRandomBinaryFileSizeInBytes()/mb ;
             double newScore = benchmarkFileSize/oldScore ;
-            return new Double(newScore) ;
+            return newScore;
         }
-
         return score ;
     }
 
