@@ -29,7 +29,7 @@ public class IOSyncSeekScoreConverter extends BaseScoreConverter {
     public Double convertScore(Double score , Map<String,Object> metaData) {
         if (score != null){
             double nominatorInMB = 128 ;
-            Double oldScore = new Double((double)score.doubleValue()/1000) ;
+            Double oldScore = Double.valueOf((double)score.doubleValue()/1000);
             return nominatorInMB/oldScore ;
         }
         return score;
